force-app/main/default/objects/BLN_AccountPlan__c/BLN_AccountPlan__c.object-meta.xml
<CustomObject>
    <description>FOUK-4763</description>
    <label>Account Plan</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Account Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>