force-app/main/default/objects/BLN_AccountPlan__c/fields/BLN_AccountName__c.field-meta.xml
<CustomField>
    <fullName>BLN_AccountName__c</fullName>
    <description>FOUK-4763</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>Account_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>