force-app/main/default/objects/BLN_AccountPlan__c/fields/BLN_AuditDate__c.field-meta.xml
<CustomField>
    <fullName>BLN_AuditDate__c</fullName>
    <description>FOUK-5356 To capture date of Audit.</description>
    <label>Audit Date</label>
    <type>Date</type>
</CustomField>