force-app/main/default/objects/BLN_AccountPlan__c/fields/BLN_AuditType__c.field-meta.xml
<CustomField>
    <fullName>BLN_AuditType__c</fullName>
    <description>FOUK-5356.</description>
    <label>Audit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint Review</fullName>
            </value>
            <value>
                <fullName>Information Security</fullName>
            </value>
            <value>
                <fullName>Claims Handling Review</fullName>
            </value>
            <value>
                <fullName>Business Continuity</fullName>
            </value>
            <value>
                <fullName>Supplier Management</fullName>
            </value>
            <value>
                <fullName>Data Privacy</fullName>
            </value>
            <value>
                <fullName>People Management</fullName>
            </value>
            <value>
                <fullName>Fee Review</fullName>
            </value>
            <value>
                <fullName>Responsible Business</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Complaints</fullName>
                <isActive>false</isActive>
                <label>Complaints</label>
            </value>
            <value>
                <fullName>Contractual</fullName>
                <isActive>false</isActive>
                <label>Contractual</label>
            </value>
            <value>
                <fullName>File</fullName>
                <isActive>false</isActive>
                <label>File</label>
            </value>
            <value>
                <fullName>Pricing</fullName>
                <isActive>false</isActive>
                <label>Pricing</label>
            </value>
            <value>
                <fullName>Telephony</fullName>
                <isActive>false</isActive>
                <label>Telephony</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>