force-app/main/default/objects/BLN_AccountPlan__c/fields/BLN_Comments__c.field-meta.xml
<CustomField>
    <fullName>BLN_Comments__c</fullName>
    <description>FOUk--5324</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>