force-app/main/default/objects/BLN_AccountPlan__c/fields/BLN_DueDate__c.field-meta.xml
<CustomField>
    <fullName>BLN_DueDate__c</fullName>
    <description>FOUK-5356. To capture due date of the audit.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>