force-app/main/default/objects/BLN_AccountPlan__c/fields/BLN_Notes__c.field-meta.xml
<CustomField>
    <fullName>BLN_Notes__c</fullName>
    <description>FOUK-5323</description>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>