force-app/main/default/objects/BLN_AccountPlan__c/fields/BLN_NumberofopenInitiatives__c.field-meta.xml
<CustomField>
    <fullName>BLN_NumberofopenInitiatives__c</fullName>
    <description>FOUK-5354 Created to use in reports</description>
    <label>Number of open Initiatives</label>
    <summaryFilterItems>
        <field>BLN_Initiative__c.BLN_Status__c</field>
        <operation>equals</operation>
        <value>Planned, In Progress</value>
    </summaryFilterItems>
    <summaryForeignKey>BLN_Initiative__c.BLN_AccountPlanName__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>