force-app/main/default/objects/BLN_AccountPlan__c/fields/BLN_OverallOutcome__c.field-meta.xml
<CustomField>
    <fullName>BLN_OverallOutcome__c</fullName>
    <description>FOUK--&gt; 5324</description>
    <label>Overall Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Major Improvement Required</fullName>
            </value>
            <value>
                <fullName>Some Improvement Required</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>