force-app/main/default/objects/BLN_AccountPlan__c/fields/BLN_Owner__c.field-meta.xml
<CustomField>
    <fullName>BLN_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-4793. This field is the reference of User</description>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>