force-app/main/default/objects/BLN_AccountPlan__c/fields/BLN_PlanName__c.field-meta.xml
<CustomField>
    <fullName>BLN_PlanName__c</fullName>
    <description>FOUK-4793. This field is the reference of Plan Name</description>
    <label>Plan Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>