force-app/main/default/objects/BLN_AccountPlan__c/fields/BLN_Status__c.field-meta.xml
<CustomField>
    <fullName>BLN_Status__c</fullName>
    <description>FOUK-5335</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
            <value>
                <fullName>Aborted,</fullName>
                <isActive>false</isActive>
                <label>Aborted,</label>
            </value>
            <value>
                <fullName>Completed,</fullName>
                <isActive>false</isActive>
                <label>Completed,</label>
            </value>
            <value>
                <fullName>In Progress,</fullName>
                <isActive>false</isActive>
                <label>In Progress,</label>
            </value>
            <value>
                <fullName>Planned,</fullName>
                <isActive>false</isActive>
                <label>Planned,</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>