force-app/main/default/objects/BLN_AccountPlan__c/fields/BLN_SummaryOfTermsOfReference__c.field-meta.xml
<CustomField>
    <fullName>BLN_SummaryOfTermsOfReference__c</fullName>
    <description>FOUK-5320 Account Audit  - Summary of terms of reference</description>
    <label>Summary of terms of reference</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>