force-app/main/default/objects/BLN_AccountPlan__c/fields/BLN_User__c.field-meta.xml
<CustomField>
    <fullName>BLN_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-4793. This field is the reference of User</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>