force-app/main/default/objects/BLN_AccountPlan__c/recordTypes/BLN_AccountAudit.recordType-meta.xml
<RecordType>
    <fullName>BLN_AccountAudit</fullName>
    <active>true</active>
    <label>Account Audit</label>
</RecordType>