force-app/main/default/objects/BLN_AccountPlan__c/recordTypes/BLN_AccountPlan.recordType-meta.xml
<RecordType>
    <fullName>BLN_AccountPlan</fullName>
    <active>true</active>
    <label>Account Plan</label>
</RecordType>