force-app/main/default/objects/BLN_AccountPlan__c/recordTypes/BLN_SalesStrategy.recordType-meta.xml
<RecordType>
    <fullName>BLN_SalesStrategy</fullName>
    <active>true</active>
    <label>Sales Strategy</label>
</RecordType>