force-app/main/default/objects/BLN_AccountPlan__c/validationRules/BLN_AccountPlanatsitelevel.validationRule-meta.xml
<ValidationRule>
    <fullName>BLN_AccountPlanatsitelevel</fullName>
    <active>true</active>
    <description>FOUK-4763</description>
    <errorConditionFormula>AND(
    NOT($Permission.BLN_BypassValidationRules),
    ISNEW(),
    ISPICKVAL(BLN_AccountName__r.BLN_Level__c, &apos;Site Account&apos;)
)</errorConditionFormula>
    <errorMessage>You cannot create an Account Plan at site level.</errorMessage>
</ValidationRule>