force-app/main/default/objects/BLN_AccountPlan__c/listViews/BLN_AllAccountPlans.listView-meta.xml
<ListView>
    <fullName>BLN_AllAccountPlans</fullName>
    <columns>NAME</columns>
    <columns>BLN_AccountName__c</columns>
    <columns>BLN_PlanName__c</columns>
    <columns>BLN_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Account Plans</label>
</ListView>