force-app/main/default/objects/BLN_AccountPlan__c/listViews/BLN_MyAccountPlans.listView-meta.xml
<ListView>
    <fullName>BLN_MyAccountPlans</fullName>
    <columns>NAME</columns>
    <columns>BLN_PlanName__c</columns>
    <columns>BLN_AccountName__c</columns>
    <columns>BLN_Owner__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Account Plans</label>
</ListView>